--- a/index.css
+++ b/index.css
@@ -1,25 +1,42 @@
-body{
-    background-color: #ececec;
-}
-
-.btn{
+body {
+    background-color: #2c3e50;
+  }
+  
+  .btn {
     cursor: pointer;
-}
-
-h1{
-    color: #334444;
-    transition: color 0.5s ease-in-out;
-}
-
-.clicked{
-    color: #7f7f7f;
-}
-
-.form,
-.greetings{
+  }
+  body {
+    color: #34495e;
+  }
+  
+  .clicked {
+    color: #7f8c8d;
+  }
+  
+  .form,
+  .greetings {
     display: none;
-}
-
-.showing{
+  }
+  
+  .showing {
     display: block;
-}
+  }
+  
+  @keyframes fadeIn {
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
+    }
+  }
+  
+  .bgImage {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    animation: fadeIn 0.5s linear;
+  }
